@@ -142,9 +142,11 @@ sigdie(const char *fmt,...)
 {
 	va_list args;
 
+#ifdef DO_LOG_SAFE_IN_SIGHAND
 	va_start(args, fmt);
 	do_log(SYSLOG_LEVEL_FATAL, fmt, args);
 	va_end(args);
+#endif
 	_exit(1);
 }
 
