@@ -42,6 +42,9 @@
      [gss-genr.c ssh-gss.h]
      constify host argument to match the rest of the GSSAPI functions and
      unbreak compilation with -Werror
+ - (djm) Disable sigdie() for platforms that cannot safely syslog inside
+   a signal handler (basically all of them, excepting OpenBSD);
+   ok dtucker@
 
 20060817
  - (dtucker) [openbsd-compat/fake-rfc2553.c openbsd-compat/setproctitle.c]
@@ -5263,4 +5266,4 @@
    - (djm) Trim deprecated options from INSTALL. Mention UsePAM
    - (djm) Fix quote handling in sftp; Patch from admorten AT umich.edu
 
-$Id: ChangeLog,v 1.4495 2006/08/18 14:46:43 djm Exp $
+$Id: ChangeLog,v 1.4496 2006/08/18 22:38:23 djm Exp $
